[gd_scene load_steps=30 format=3 uid="uid://bfmvy7wmymc2l"]

[ext_resource type="Texture2D" uid="uid://d0f7jq4x8g3ai" path="res://assets/texture/texture_leaf_pattern.png" id="1_mdruy"]
[ext_resource type="Script" path="res://scenes/ui/gallery/gallery.gd" id="1_mortg"]
[ext_resource type="Script" path="res://scenes/ui/ui_upscaler.gd" id="2_ya6i8"]
[ext_resource type="Script" path="res://scenes/ui/gallery/gallery_entry.gd" id="4_5tap1"]
[ext_resource type="Theme" uid="uid://cjbn10bkr6ldk" path="res://resource/custom_scroll_bar.tres" id="4_70f6a"]
[ext_resource type="Texture2D" uid="uid://boq4h7pwnxh70" path="res://assets/texture/ui/texture_ui_border.png" id="4_f3clh"]
[ext_resource type="Texture2D" uid="uid://dd7euwxcnfdll" path="res://assets/texture/texture_blurred_alleyway.png" id="4_oydno"]
[ext_resource type="PackedScene" uid="uid://bcrys4arojn37" path="res://scenes/ui/paper_button.tscn" id="5_6rj0g"]
[ext_resource type="FontFile" uid="uid://b16ggo6tgg351" path="res://assets/font/Gabriela-Regular.ttf" id="6_df0lg"]
[ext_resource type="PackedScene" uid="uid://teb4p57yamr3" path="res://scenes/ui/paper_button_h_flipped.tscn" id="6_tq5qv"]
[ext_resource type="Texture2D" uid="uid://sdl8j5jl2imb" path="res://assets/texture/ui/texture_ui_magnifying_glass.png" id="7_a6ulm"]
[ext_resource type="Script" path="res://scenes/ui/button_selection_handler.gd" id="7_jbjr6"]
[ext_resource type="Script" path="res://scenes/ui/gallery/gallery_entry_zoom.gd" id="11_821sk"]
[ext_resource type="PackedScene" uid="uid://cyaqutbexr62l" path="res://scenes/ui/gamepad_tooltip/gamepad_tooltip.tscn" id="12_5tthr"]
[ext_resource type="AudioStream" uid="uid://bjx1cljsycx7w" path="res://assets/audio/sfx_gallery_entry_accent_1.ogg" id="12_pel3b"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6ipxy"]
blend_mode = 3

[sub_resource type="Gradient" id="Gradient_v4ool"]
colors = PackedColorArray(0, 0, 0, 1, 0.338768, 0.0813456, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lwg7b"]
gradient = SubResource("Gradient_v4ool")
width = 8
height = 8
fill_to = Vector2(0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_covmy"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_ofvwy"]
colors = PackedColorArray(0, 0, 0, 1, 0.768596, 0.504942, 0.275338, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_68vjm"]
gradient = SubResource("Gradient_ofvwy")
fill_to = Vector2(0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6yf58"]
blend_mode = 3

[sub_resource type="Gradient" id="Gradient_vcwdi"]
offsets = PackedFloat32Array(0.0273141, 0.0500759, 0.116844)
colors = PackedColorArray(0, 0, 0, 1, 0.501961, 0.137255, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4cx3l"]
gradient = SubResource("Gradient_vcwdi")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_g7gg4"]
offsets = PackedFloat32Array(0, 0.0394537, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.501835, 0.137968, 0, 1, 0.18193, 0.0281259, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_flh8y"]
gradient = SubResource("Gradient_g7gg4")
width = 8
height = 8
fill_to = Vector2(0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_niipn"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_pd1am"]
offsets = PackedFloat32Array(0, 0.443096)
colors = PackedColorArray(1, 0.7975, 0.55, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_np5xa"]
gradient = SubResource("Gradient_pd1am")
fill_to = Vector2(0, 1)

[node name="Gallery" type="Control" node_paths=PackedStringArray("gallery_base_entry", "gallery_origin", "tip_label", "button_selection_handler", "back_button", "open_folder_button", "scroll_container", "gallery_entry_origin", "gallery_entry_zoom", "gamepad_tooltip")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mortg")
gallery_base_entry = NodePath("ScrollContainer/GridContainer/GalleryEntry")
gallery_origin = NodePath("ScrollContainer/GridContainer")
tip_label = NodePath("TipLabel")
button_selection_handler = NodePath("Buttons/ButtonSelectionHandler")
back_button = NodePath("Buttons/PaperButton")
open_folder_button = NodePath("Buttons/PaperButtonHFlipped")
scroll_container = NodePath("ScrollContainer")
gallery_entry_origin = NodePath("ScrollContainer/GridContainer")
gallery_entry_zoom = NodePath("GalleryEntryZoom")
gamepad_tooltip = NodePath("GamepadTooltip")

[node name="Background" type="TextureRect" parent="."]
z_index = -8
layout_mode = 1
anchors_preset = -1
anchor_right = 2.0
anchor_bottom = 2.0
offset_right = 1027.84
offset_bottom = 504.72
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_mdruy")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="Background"]
material = SubResource("CanvasItemMaterial_6ipxy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_lwg7b")

[node name="TipLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.065
anchor_right = 1.0
anchor_bottom = 0.792
offset_left = 128.0
offset_top = 0.199997
offset_right = -96.0
offset_bottom = -0.240051
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("6_df0lg")
theme_override_font_sizes/font_size = 24
text = "GALLERY_TIP"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 69.0
offset_right = -96.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_70f6a")
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 16
columns = 4

[node name="GalleryEntry" type="TextureRect" parent="ScrollContainer/GridContainer" node_paths=PackedStringArray("highlight", "magnifying_glass", "audio_selection_accent")]
clip_contents = true
custom_minimum_size = Vector2(240, 160)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("4_f3clh")
expand_mode = 1
script = ExtResource("4_5tap1")
highlight = NodePath("Highlight")
magnifying_glass = NodePath("TextureRect2")
audio_selection_accent = NodePath("../../../GalleryEntryAccent")

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/GridContainer/GalleryEntry"]
show_behind_parent = true
texture_filter = 2
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -120.0
offset_bottom = -80.0
scale = Vector2(2, 2)
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("4_oydno")
expand_mode = 1
stretch_mode = 6

[node name="Highlight" type="TextureRect" parent="ScrollContainer/GridContainer/GalleryEntry"]
show_behind_parent = true
texture_filter = 2
material = SubResource("CanvasItemMaterial_covmy")
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -120.0
offset_bottom = -80.0
scale = Vector2(2, 2)
size_flags_horizontal = 4
mouse_filter = 2
texture = SubResource("GradientTexture2D_68vjm")
expand_mode = 1
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="ScrollContainer/GridContainer/GalleryEntry"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 214.0
offset_top = 134.0
offset_right = 14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_a6ulm")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_6yf58")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_4cx3l")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_df0lg")
theme_override_font_sizes/font_size = 24
text = "GALLERY_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background2" type="TextureRect" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 2.0
anchor_bottom = 2.0
offset_top = 559.0
offset_right = 1155.84
offset_bottom = 50.12
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 0
texture = ExtResource("1_mdruy")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Background2"]
material = SubResource("CanvasItemMaterial_6ipxy")
layout_mode = 1
anchors_preset = -1
anchor_top = -0.253
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0499954
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_flh8y")

[node name="TextureRect2" type="TextureRect" parent="Buttons/Background2"]
modulate = Color(1, 1, 1, 0.0784314)
material = SubResource("CanvasItemMaterial_niipn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_np5xa")

[node name="PaperButton" parent="Buttons" instance=ExtResource("5_6rj0g")]
z_index = 1655
layout_mode = 1
anchor_top = 0.833
anchor_right = 0.0
anchor_bottom = 1.011
offset_left = -18.0
offset_top = -22.7601
offset_right = 495.0
offset_bottom = -22.9201
text_key = "MENU_BUTTON_BACK"

[node name="PaperButtonHFlipped" parent="Buttons" instance=ExtResource("6_tq5qv")]
z_index = 1425
layout_mode = 1
anchor_left = 1.0
anchor_top = 0.833
anchor_right = 1.0
anchor_bottom = 1.011
offset_left = -496.0
offset_top = -22.7601
offset_right = 17.0
offset_bottom = -22.9201
target_selected_position = Vector2(12, 0)
target_deselected_position = Vector2(96, 0)
text_key = "MENU_BUTTON_GALLERY_FOLDER"
custom_font_size = 24

[node name="ButtonSelectionHandler" type="Node" parent="Buttons" node_paths=PackedStringArray("buttons_origin")]
script = ExtResource("7_jbjr6")
horizontal = true
buttons_origin = NodePath("..")

[node name="GamepadTooltip" parent="." instance=ExtResource("12_5tthr")]
layout_mode = 1

[node name="GalleryEntryZoom" type="Control" parent="." node_paths=PackedStringArray("entry_origin")]
z_index = 4096
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_821sk")
entry_origin = NodePath("CenterContainer")

[node name="ColorRect" type="ColorRect" parent="GalleryEntryZoom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.843137)

[node name="CenterContainer" type="CenterContainer" parent="GalleryEntryZoom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
use_top_left = true

[node name="TextureRect" type="TextureRect" parent="GalleryEntryZoom/CenterContainer"]
show_behind_parent = true
z_index = 1
texture_filter = 2
custom_minimum_size = Vector2(960, 540)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("4_oydno")
expand_mode = 1
stretch_mode = 5

[node name="UIUpscaler" type="Node" parent="."]
script = ExtResource("2_ya6i8")

[node name="GalleryEntryAccent" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_pel3b")
volume_db = -4.0
pitch_scale = 0.9
max_polyphony = 6
bus = &"SFX"
